compiler/testData/diagnostics/tests/sealed/NeverFinal.kt
<!INCOMPATIBLE_MODIFIERS!>final<!> sealed class Base {

}